<resources>
    <string name="app_name">Filmoteca</string>
    <string name="film_editing">Editando película</string>
    <string name="film_edit_result_ok">Editado correctamente</string>
    <string name="film_edit_result_cancelled">Edición cancelada</string>
    <string name="nullValue" translatable="false">Default/Null</string>
    <string name="google_cloud_client_id" translatable="false">13801236933-p9q7ceh6o576pan3ij2bnupcgd2j5bn1.apps.googleusercontent.com</string>
    <!-- LOGIN -->
    <string name="login_button">Iniciar sesión</string>

    <!-- ABOUT -->
    <string name="developed_by">Creada por Angel Terol</string>
    <string name="to_webpage">Ir al sitio web</string>
    <string name="support">Obtener soporte</string>
    <string name="back">Volver</string>
    <string name="email_to" translatable="false">jtm37@alu.ua.es</string>
    <string name="webPage" translatable="false">https://egenad.github.io/</string>

    <!-- FILM LIST -->
    <string name="menu_about">Acerca de</string>
    <string name="imageDescription">Póster de la película</string>
    <string name="menu_add_film">Añadir Película</string>
    <string name="menu_close_session">Cerrar sesión</string>
    <string name="menu_disconnect_account">Desconectar cuenta</string>
    <string name="delete_films">Eliminar Películas</string>
    <string name="films_selected">seleccionado/s</string>

    <!-- FILM DATA -->
    <string name="film_data"><h1><b>Datos de la película</b></h1></string>
    <string name="film_imdb"><b>VER EN IMDB</b></string>
    <string name="film_edit"><b>EDITAR PELICULA</b></string>
    <string name="film_return"><b>VOLVER AL PRINCIPAL</b></string>
    <string name="show_map"><b>MOSTRAR EN MAPA</b></string>
    <string name="film_rf_name">Regreso al futuro</string>
    <string name="film_rf_director" translatable="false">Robert Zemeckis</string>
    <string name="film_h1_name">Harry Potter: La Piedra Filosofal</string>
    <string name="film_h1_director" translatable="false">Chris Columbus</string>
    <string name="film_h2_name">Harry Potter: La Cámara Secreta</string>
    <string name="film_ij_name">Indiana Jones: En busca del Arca Perdida</string>
    <string name="film_ij_director" translatable="false">Steven Spielberg</string>
    <string name="film_edit_result">Editado</string>
    <string name="film_year_header"><i>Año:</i></string>
    <string name="extended_version">Versión extendida</string>
    <string name="film_year_value" translatable="false">1985</string>
    <string name="film_director_header" translatable="false"><i>Director:</i></string>
    <string name="latitude"><i>Latitud: %f</i></string>
    <string name="geoEnabled"><i>Geocercado: %s</i></string>
    <string name="longitude"><i>Longitud: %f</i></string>
    <string name="film_genre_0">Acción</string>
    <string name="film_genre_1">Comedia</string>
    <string name="film_genre_2" translatable="false">Drama</string>
    <string name="film_genre_3" translatable="false">Sci-Fi</string>
    <string name="film_genre_4" translatable="false">Horror</string>
    <string name="film_genre_5">Fantasía</string>
    <string name="film_format_0" translatable="false">DVD</string>
    <string name="film_format_1" translatable="false">Digital</string>
    <string name="film_format_2" translatable="false">Blue-Ray</string>
    <string name="enabled"><b>Habilitado</b></string>
    <string name="disabled"><b>Deshabilitado</b></string>
    <string name="enter_geofence"><b>Entraste en la zona de la película</b></string>
    <string name="exit_geofence"><b>Saliste de la zona de la película</b></string>
    <string name="activated_geofence"><b>Geocercado activado</b></string>
    <string name="error_geofence"><b>Error activando geocercado</b></string>
    <string name="removed_geofence"><b>Geofence eliminado</b></string>
    <string name="error_removing_geofence"><b>Error eliminando geocercado</b></string>

    <!-- FILM EDIT -->
    <string name="film_photo">CAPTURA FOTOGRAFIA</string>
    <string name="film_select_image">SELECCIONA IMAGEN</string>
    <string name="film_save">GUARDAR</string>
    <string name="film_cancel">CANCELAR</string>
    <string name="film_geoEnable">Añadir Geocercado</string>
    <string name="film_geoDisable">Eliminar Geocercado</string>
    <string name="film_edit_title">Título de la película</string>
    <string name="film_edit_director">Nombre del director</string>
    <string name="film_edit_year">Año</string>
    <string name="film_edit_imdb">Enlace a IMDB</string>
    <string name="film_edit_comments">Comentarios</string>
    <string name="film_default_title">Nombre por defecto</string>
    <string name="film_default_director">Director por defecto</string>
    <string name="film_default_imdb" translatable="false">http://www.imdb.com</string>
    <string name="error_perm">Error: La aplicación no posee permisos de geolocalización.</string>

    <!-- ERRORS -->

    <string name="error_open_camera">ERROR: No se ha podido abrir la cámara</string>
    <string name="error_take_photo">ERROR: No se ha podido guardar la fotografía</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <!-- FIRE CLOUD MESSAGING -->
    <string name="permissions_needed">Permiso necesario</string>
    <string name="permissions_ask">Esta aplicación necesita el permiso de notificaciones para avisarte sobre eventos importantes. ¿Quieres concederlo?</string>
    <string name="accept">Aceptar</string>
    <string name="no_thanks">No, gracias</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>