<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilmEditActivity">

  <TextView
      android:id="@+id/film_editing"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="258dp"
      android:text="@string/film_editing"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.136"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/film_save"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="30dp"
      android:layout_marginTop="200dp"
      android:layout_marginEnd="20dp"
      android:layout_marginBottom="20dp"
      android:text="@string/film_save"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.481"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.924" />

  <Button
      android:id="@+id/film_cancel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="10dp"
      android:text="@string/film_cancel"
      app:layout_constraintBottom_toBottomOf="@+id/film_save"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.163"
      app:layout_constraintStart_toEndOf="@+id/film_save"
      app:layout_constraintTop_toTopOf="@+id/film_save" />

</androidx.constraintlayout.widget.ConstraintLayout>