<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilmDataActivity">

    <TextView
        android:id="@+id/film_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="258dp"
        android:text="@string/film_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.239"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/film_related"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/film_related"
        app:layout_constraintBottom_toTopOf="@+id/film_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/film_data" />

    <Button
        android:id="@+id/film_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/film_edit"
        app:layout_constraintBottom_toTopOf="@+id/film_return"
        app:layout_constraintEnd_toEndOf="@+id/film_related"
        app:layout_constraintStart_toStartOf="@+id/film_related"
        app:layout_constraintTop_toBottomOf="@+id/film_related" />

    <Button
        android:id="@+id/film_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/film_return"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/film_edit"
        app:layout_constraintStart_toStartOf="@+id/film_edit"
        app:layout_constraintTop_toBottomOf="@+id/film_edit" />
</androidx.constraintlayout.widget.ConstraintLayout>